# NutriTracker

./: docker-compose.yaml  pyproject.toml
src/: main.py
src/accounts/: routes.py  schemas.py
src/db/: database.py  models.py
src/middleware/: jwt_methods.py  redis_client.py  verification.py
src/utils/: email_utils.py
